--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@auth/prisma-adapter": "^2.11.1",
     "@prisma/client": "^6.19.0",
+    "@stripe/stripe-js": "^8.5.3",
     "bcryptjs": "^3.0.3",
     "next": "16.0.7",
     "next-auth": "^5.0.0-beta.30",
@@ -21,6 +22,7 @@
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "resend": "^6.6.0",
+    "stripe": "^20.0.0",
     "zod": "^4.1.13"
   },
   "devDependencies": {
