--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "bcryptjs": "^3.0.3",
     "next": "16.0.7",
     "next-auth": "^5.0.0-beta.30",
+    "pdf": "^0.1.0",
+    "pdf-lib": "^1.17.1",
     "prisma": "^6.19.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
